--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,5 +7,5 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 # DATABASE_URL=postgres://user:password@localhost:5432/database
 
 # Cross-origin configuration for the React dev server
-CORS_ALLOWED_ORIGINS=http://localhost,http://localhost:3000
-CSRF_TRUSTED_ORIGINS=http://localhost,http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost,http://127.0.0.1,http://localhost:3000,http://127.0.0.1:3000
+CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1,http://localhost:3000,http://127.0.0.1:3000
