--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,14 @@ services:
   backend:
     build:
       context: ./backend
-    command: sh -c "python manage.py migrate && python manage.py seed_demo_data && python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py wait_for_db --timeout 120 && python manage.py migrate --noinput && python manage.py seed_demo_data && python manage.py runserver 0.0.0.0:8000"
     restart: unless-stopped
     volumes:
       - ./backend:/app
     environment:
       DJANGO_SECRET_KEY: change-me
       DJANGO_DEBUG: "True"
-      DJANGO_ALLOWED_HOSTS: localhost,127.0.0.1,nginx,backend
+      DJANGO_ALLOWED_HOSTS: localhost,127.0.0.1,nginx,backend,risk.rmk.lol
       DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
       CORS_ALLOWED_ORIGINS: http://localhost,http://127.0.0.1,http://localhost:3000,http://127.0.0.1:3000
       CSRF_TRUSTED_ORIGINS: http://localhost,http://127.0.0.1,http://localhost:3000
@@ -56,3 +56,4 @@ services:
 
 volumes:
   postgres-data:
+
